# btr

./: .gitignore  LICENSE  Makefile.am  README.md  TODO.md  configure.ac  curl.example.conf  php.example.conf
lib/btr/: btr.mk  btr.sh  php.mk  tmp.sh
lib/btr/report/: mail.mk  notify-send.mk  twilio.mk
lib/btr/source/: cvs.mk  git.mk  svn.mk
share/btr/: btr-hook.args  btr-hook.flags  btr.flags  btr.opts  btr.sh  btrc.args  btrc.opts  btrc.sh  btrd.opts  btrd.sh  common.flags  common.sh  common.sh.in  irc.php  opt.awk  opt.awk.in
share/btr/report/: irc.mk  mail.mk  notify-send.mk  twilio.mk
share/btr/source/: cvs.mk  git.mk  svn.mk
