dist_bin_SCRIPTS = bin/btr \
                   bin/btr-irc-relay \
                   bin/btr-irc-send
btrlibdir = $(prefix)
nobase_dist_btrlib_SCRIPTS = lib/btr/build/pecl.mk \
	lib/btr/build/make.mk \
	lib/btr/build/gnu.mk \
	lib/btr/build/php.mk \
	lib/btr/build/composer.mk \
	lib/btr/report/mail.mk \
	lib/btr/report/twilio.mk \
	lib/btr/report/notify-send.mk \
	lib/btr/report/irc.mk \
	lib/btr/source/cvs.mk \
	lib/btr/source/git.mk \
	lib/btr/source/svn.mk \
	lib/btr/btr.sh \
	lib/btr/irc.php
