dist_bin_SCRIPTS = bin/btr \
                   bin/btr-irc-relay \
                   bin/btr-irc-send
btrdir = $(prefix)
nobase_dist_btr_SCRIPTS = share/btr/build/pecl.mk \
                          share/btr/build/make.mk \
                          share/btr/build/gnu.mk \
                          share/btr/build/php.mk \
                          share/btr/build/composer.mk \
                          share/btr/report/mail.mk \
                          share/btr/report/twilio.mk \
                          share/btr/report/notify-send.mk \
                          share/btr/report/irc.mk \
                          share/btr/source/cvs.mk \
                          share/btr/source/git.mk \
                          share/btr/source/svn.mk \
                          share/btr/btr.sh \
                          share/btr/irc.php
